Added controller logic

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
 2008-06-22 - Sean Huber (shuber@huberry.com)
+	* Added controller logic
+
+2008-06-22 - Sean Huber (shuber@huberry.com)
 	* Initial import
