--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 2008-06-22 - Sean Huber (shuber@huberry.com)
+	* Made authorized? a helper_method
+
+2008-06-22 - Sean Huber (shuber@huberry.com)
 	* Protected the controller instance methods
 
 2008-06-22 - Sean Huber (shuber@huberry.com)
