Added controller/model logic and tests

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 2008-06-23 - Sean Huber (shuber@huberry.com)
+	* Added controller/model logic and tests
+
+2008-06-23 - Sean Huber (shuber@huberry.com)
 	* Added some model logic - incomplete
 
 2008-06-22 - Sean Huber (shuber@huberry.com)
