--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,9 @@
 	* Updated README
 
 2008-06-23 - Sean Huber (shuber@huberry.com)
+	* Updated README
+
+2008-06-23 - Sean Huber (shuber@huberry.com)
 	* Added controller/model logic and tests
 
 2008-06-23 - Sean Huber (shuber@huberry.com)
