Convert to soft tabs

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 2009-01-08 - Sean Huber (shuber@huberry.com)
   * Clean up CHANGELOG
   * Remove .gitignore
+  * Convert to soft tabs
 
 2008-06-23 - Sean Huber (shuber@huberry.com)
   * Added some model logic - incomplete
