--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 2009-01-09 - Sean Huber (shuber@huberry.com)
   * Remove model logic
   * Update README
+  * Gemify
 
 2009-01-08 - Sean Huber (shuber@huberry.com)
   * Clean up CHANGELOG
